--- a/styles/checkbox.css
+++ b/styles/checkbox.css
@@ -15,6 +15,8 @@ checkbox {
     -webkit-tap-highlight-color: transparent;
     transition: var(--mediumTransition) ease-in-out;
     transition-property: background-color, border-color, opacity;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 checkbox toggle {
