--- a/styles/main.css
+++ b/styles/main.css
@@ -779,12 +779,12 @@ notification p {
 
 notification.meta {
   z-index: 300;
+  background-color: hsl(var(--appBackgroundDarkestHSL));
   background-image: linear-gradient(hsla(var(--appBackgroundDarkestHSL), 1), hsla(var(--appBackgroundDarkestHSL), 0) 50%), var(--textureHue), var(--texture2);
   background-repeat: no-repeat, no-repeat, repeat;
   background-position: top center;
   background-size: cover, cover, var(--textureSize);
   justify-content: center;
-  background: hsl(var(--appBackgroundDarkestHSL));
   transition: none;
   gap: calc(0.75 * var(--defaultGap));
 }
