--- a/styles/light.css
+++ b/styles/light.css
@@ -98,7 +98,7 @@ header button.small {
 }
 
 tray diamond {
-  background-image: url(../images/diamond-light-2.svg);
+  background-image: url(../images/diamond-light.svg);
 }
 
 cards card,
