--- a/styles/main.css
+++ b/styles/main.css
@@ -535,7 +535,7 @@ icon.cal10 {
 
 icon.cal11 {
   mask-image: url(../images/icon-calendar-11.svg);
-  -webkit-mask-image: url(../images/icon-calendar.-11svg);
+  -webkit-mask-image: url(../images/icon-calendar-11svg);
 }
 
 icon.cal12 {
