--- a/styles/main.css
+++ b/styles/main.css
@@ -647,6 +647,25 @@ icon.spinner.show {
   }
 }
 
+.blink {
+  animation: 700ms ease-in-out 0s 0.5 blink;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  --webikit-animation: 700ms ease-in-out 0s 0.5 blink;
+  --webikit-animation-iteration-count: infinite;
+  --webikit-animation-direction: alternate;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 icon.add {
   mask-image: url(../images/icon-plus.svg);
   -webkit-mask-image: url(../images/icon-plus.svg);
