--- a/styles/main.css
+++ b/styles/main.css
@@ -682,19 +682,19 @@ parking spot.pointout {
   animation: pointout 2s var(--transitionEase) 0s infinite;
 }
 
-parking spot.pointout:nth-of-type(1) {
+.mobile parking spot.pointout:nth-of-type(1) {
   animation: pointout 2s var(--transitionEase) 0s infinite;
 }
 
-parking spot.pointout:nth-of-type(2) {
+.mobile parking spot.pointout:nth-of-type(2) {
   animation: pointout 2s var(--transitionEase) 0.5s infinite;
 }
 
-parking spot.pointout:nth-of-type(3) {
+.mobile parking spot.pointout:nth-of-type(3) {
   animation: pointout 2s var(--transitionEase) 1s infinite;
 }
 
-parking spot.pointout:nth-of-type(4) {
+.mobile parking spot.pointout:nth-of-type(4) {
   animation: pointout 2s var(--transitionEase) 1.5s infinite;
 }
 
@@ -1016,20 +1016,20 @@ pointer {
   display: flex;
   position: absolute;
   z-index: 199;
-  padding: calc(0.5 * var(--defaultGap)) calc(0.75 * var(--defaultGap));
+  border: 2px solid hsl(var(--messageColorHSL));
   font-family: Arial, sans-serif;
   font-size: 14px;
-  color: hsl(var(--appBackgroundHSL));
+  color: hsl(var(--appBackgroundDarkestHSL));
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: bottom;
+  align-items: left;
   margin-right: var(--defaultGap);
-  gap: calc(0.5 * var(--defaultGap));
-  max-width: calc(2 * var(--cardSize) - 2 * var(--defaultGap));
+  max-width: calc(2 * var(--cardSize) - 1 * var(--defaultGap));
   background: hsl(var(--messageColorHSL));
   border-radius: 8px;
   white-space: nowrap;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: 0s ease-in-out none;
 }
 
 pointer.inplay {
@@ -1037,13 +1037,15 @@ pointer.inplay {
 }
 
 pointer p {
-  width: 100%;
+  width: calc(100% - 2 * 0.75 * var(--defaultGap));
+  padding: calc(0.5 * var(--defaultGap)) calc(0.75 * var(--defaultGap)) 0;
   font-size: 16px;
   text-align: left;
   text-wrap: wrap;
 }
 
 pointer p.controls {
+  padding: calc(0.5 * var(--defaultGap)) calc(0.75 * var(--defaultGap));
   font-size: 13px;
   text-align: right;
 }
@@ -1055,7 +1057,7 @@ pointer a:visited,
 pointer a:active {
   display: inline-block;
   font-style: italic;
-  color: hsl(var(--appBackgroundHSL));
+  color: hsl(var(--appBackgroundDarkestHSL));
   opacity: 0.7;
 }
 
@@ -1066,6 +1068,34 @@ pointer a:hover {
 pointer.hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+arrow {
+  position: absolute;
+  width: 18px;
+  height: 12px;
+  transform: translate(-10px, 2px);
+  background: hsl(var(--messageColorHSL));
+  clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
+  rotate: 180deg;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+arrow::before {
+  display: none;
+  position: absolute;
+  z-index: -1;
+  width: calc(100% - 4px);
+  height: calc(100% - 4px);
+  transform: translate(2px, 4px);
+  content: '';
+  background: hsl(var(--appBackgroundHSL));
+  clip-path: inherit;
+}
+
+arrow.top {
+  transform: translate(10px, -14px);
+  rotate: 0deg;
 }
 
 notification message.highlighted {
