--- a/styles/main.css
+++ b/styles/main.css
@@ -665,10 +665,19 @@ icon.spinner.show {
   }
 }
 
-tray.pointout hints.pointout hint {
+.disabled.pointoutparent {
+  opacity: 1;
+}
+
+tray.pointout hints.pointout hint,
+button#shareButton.pointout {
   animation: 400ms ease-in-out 0s 0.3 blink;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+}
+
+button#shareButton.pointout span {
+  opacity: 1;
 }
 
 tray spot.pointout rotators button icon {
@@ -683,19 +692,19 @@ parking spot.pointout {
 }
 
 .mobile parking spot.pointout:nth-of-type(1) {
-  animation: pointout 2s var(--transitionEase) 0s infinite;
+  animation-delay: 0s;
 }
 
 .mobile parking spot.pointout:nth-of-type(2) {
-  animation: pointout 2s var(--transitionEase) 0.5s infinite;
+  animation-delay: 0.5s;
 }
 
 .mobile parking spot.pointout:nth-of-type(3) {
-  animation: pointout 2s var(--transitionEase) 1s infinite;
+  animation-delay: 1s;
 }
 
 .mobile parking spot.pointout:nth-of-type(4) {
-  animation: pointout 2s var(--transitionEase) 1.5s infinite;
+  animation-delay: 1.5s;
 }
 
 @keyframes pointout {
@@ -1016,24 +1025,23 @@ pointer {
   display: flex;
   position: absolute;
   z-index: 199;
+  width: 100%;
+  height: 90px;
   border: 2px solid hsl(var(--messageColorHSL));
   font-family: Arial, sans-serif;
   font-size: 14px;
   color: hsl(var(--appBackgroundDarkestHSL));
   flex-direction: column;
-  justify-content: bottom;
+  justify-content: space-between;
   align-items: left;
+  right: 0px;
+  max-width: calc(2 * var(--cardSize) + 0.5 * var(--defaultGap));
   margin-right: var(--defaultGap);
-  max-width: calc(2 * var(--cardSize) - 1 * var(--defaultGap));
   background: hsl(var(--messageColorHSL));
   border-radius: 8px;
   white-space: nowrap;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   transition: 0s ease-in-out none;
-}
-
-pointer.inplay {
-  transition: var(--mediumTransition) ease-in-out all;
 }
 
 pointer p {
@@ -1065,13 +1073,14 @@ pointer a:hover {
   opacity: 1;
 }
 
-pointer.hidden {
-  opacity: 0;
-  pointer-events: none;
+pointer.inplay {
+  transition-property: left, top;
+  transition: var(--mediumTransition) ease-in-out;
 }
 
 arrow {
   position: absolute;
+  z-index: 199;
   width: 18px;
   height: 12px;
   transform: translate(-10px, 2px);
@@ -1079,6 +1088,7 @@ arrow {
   clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
   rotate: 180deg;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: 0s ease-in-out none;
 }
 
 arrow::before {
@@ -1096,6 +1106,17 @@ arrow::before {
 arrow.top {
   transform: translate(10px, -14px);
   rotate: 0deg;
+}
+
+arrow.inplay {
+  transition-property: margin, rotate;
+  transition: var(--mediumTransition) ease-in-out;
+}
+
+pointer.hidden,
+arrow.hidden {
+  opacity: 0;
+  pointer-events: none;
 }
 
 notification message.highlighted {
